--- a/TODO
+++ b/TODO
@@ -6,5 +6,12 @@ Once lib/shell.rb is available
 + look at shared modules jdk, jvm, rvm etc.
 + port rust
 
-- go over all spec changes since branching off, and port them
++ go over all spec changes since branching off, and port them
 
+- what's up with `travis_cmd \[\]`
+- what's up with travis_cmd cd\ \{:echo\=\>true\}
+- what's up with these
+    travis_cmd sudo\ service\ \\\[:git,\\\ \\\{:depth\\\=\\\>50,\\\ :submodules\\\=\\\>true,\\\ :strategy\\\=\\\>\\\"clone\\\"\\\}\\\]\ start
+    travis_cmd sudo\ service\ \\\[:rvm,\\\ \\\"default\\\"\\\]\ start
+    travis_cmd sudo\ service\ \\\[:gemfile,\\\ \\\"gemfile\\\"\\\]\ start
+    travis_cmd sudo\ service\ \\\[:addons,\\\ \\\{:postgresql\\\=\\\>\\\"9.3\\\"\\\}\\\]\ start
