cleanup spec/stages and payloads

--- a/TODO
+++ b/TODO
@@ -7,4 +7,4 @@ Once lib/shell.rb is available
 + port rust
 
 + go over all spec changes since branching off, and port them
-
+- add a fold around announce
